<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/introText"
        android:layout_width="314dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/intro_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outroText"
        android:layout_width="278dp"
        android:layout_height="84dp"
        android:gravity="center"
        android:text="@string/outro_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dayText"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:text="@string/day_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/dayValue"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toEndOf="@+id/dayValue"
        app:layout_constraintTop_toTopOf="@+id/dayValue" />

    <TextView
        android:id="@+id/yearValue"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/year_value"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/yearText"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/monthValue"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/month_value"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/yearText"
        app:layout_constraintEnd_toStartOf="@+id/monthText"
        app:layout_constraintStart_toEndOf="@+id/yearText"
        app:layout_constraintTop_toTopOf="@+id/yearText" />

    <TextView
        android:id="@+id/monthText"
        android:layout_width="66dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/month_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/monthValue"
        app:layout_constraintEnd_toStartOf="@+id/dayValue"
        app:layout_constraintStart_toEndOf="@+id/monthValue"
        app:layout_constraintTop_toTopOf="@+id/monthValue"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/yearText"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/year_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/yearValue"
        app:layout_constraintEnd_toStartOf="@+id/monthValue"
        app:layout_constraintStart_toEndOf="@+id/yearValue"
        app:layout_constraintTop_toTopOf="@+id/yearValue" />

    <TextView
        android:id="@+id/dayValue"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/day_value"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/monthText"
        app:layout_constraintEnd_toStartOf="@+id/dayText"
        app:layout_constraintStart_toEndOf="@+id/monthText"
        app:layout_constraintTop_toTopOf="@+id/monthText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="86dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="364dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="170dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="66dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="67dp" />

</androidx.constraintlayout.widget.ConstraintLayout>